src/objects/Coffee_cluster_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coffee cluster Meetings</relationshipLabel>
        <relationshipName>Coffee_cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coffee_Farmer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coffee Farmer</label>
        <referenceTo>Coffee_Farmer__c</referenceTo>
        <relationshipLabel>Coffee cluster Meetings</relationshipLabel>
        <relationshipName>Coffee_cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_add_the_date_of_the_meeting__c</fullName>
        <description>Date</description>
        <label>Please add the date of the meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Was_market_information_provided_today__c</fullName>
        <description>Market information</description>
        <label>Was market information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_weather_information_provided_today__c</fullName>
        <description>Weather information</description>
        <label>Was weather information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_GAPs_were_discussed_at_the_meeting__c</fullName>
        <description>What Good Agricultural Practices were discussed today</description>
        <label>What GAPs were discussed at the meeting</label>
        <picklist>
            <picklistValues>
                <fullName>GAP 1: Soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2: Desuckering pruning and stumping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 3: Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 4: On farm coffee value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 5: Proper farm record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 6: Group production/ marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 7: Proper and timely weed control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 8: Coffee pests and disease control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 9: Coffee processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 10: Easily access agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Coffee cluster Meeting</label>
    <nameField>
        <label>Coffee cluster Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coffee cluster Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>